added first post

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,14 +1,14 @@
 !!!
 html
   head
-    title= 'Poet Demo'
+    title= 'Az7ar'
     meta(charset='utf-8')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     .navbar.navbar-fixed-top
       .navbar-inner
         .container
-          a.brand(href='/') Poet Demos
+          a.brand(href='/') Hello World :P
     .wrap
       .container
         .row
