updated markdown post

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -29,7 +29,7 @@ html
                 - each tag in tagList
                   li
                     a(href=tagUrl(tag)) #{tag}
-    footer.footer
+    footer.footer#footer
       .container
         p#copy
           | Copyright ©  Az7ar 2013
