--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -10,6 +10,11 @@ body {
 	padding-top: 80px;
 }
 
+.footer {
+	background-color: #f5f5f5;
+	padding: 10px;
+}
+
 .pagination {
   height: 36px;
   margin: 18px 0;
