--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,7 @@ html
   head
     title= 'Az7ar'
     meta(charset='utf-8')
+    link(rel="shortcut icon", href="/favicon.ico")
     link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/app.css')
   body
