added google analytics code

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -30,6 +30,9 @@ html
                 - each tag in tagList
                   li
                     a(href=tagUrl(tag)) #{tag}
+
+  script(type='text/javascript', src='/javascripts/analytics.js')
+
     footer.footer#footer
       .container
         p#copy
