logo height width added in layout

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,7 +11,7 @@ html
       .navbar-inner
         .container
           a.brand#az-brand(href='/')
-            img#az-logo(src='/images/logo.png')
+            img#az-logo(src='/images/logo.png', height='60', weidth='90')
             span 's Blog
 
     .wrap
